--- a/index.html
+++ b/index.html
@@ -5,10 +5,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <!-- font Awesome Link -->
+    <script src="https://kit.fontawesome.com/ddb9558c21.js" crossorigin="anonymous"></script>
+    <!--css style link -->
+    <link rel="stylesheet" href="style.css">
+    <title>Influencer Shop | Best place to Buy your Dream Product</title>
 </head>
 
 <body>
+    <header>
+        <section class="header-container">
+            <div class="banner">
+                <div class="banner-left">
+                    <h1>The Greatest</h1>
+                    <h1>show on the</h1>
+                    <h1>Earth</h1>
+                    <p>The FIFA World Cup was first held in 1930, when FIFA, the world's football governing body,
+                        decided to stage an international men's football tournament.</p>
+                    <a href="#" class="primary-btn">
+                        Watch
+                        <i class="fas fa-long-arrow-alt-right"></i>
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </a>
+
+                </div>
+                <div class="banner-right">
+                    <img src="images/Banner Image.png" alt="">
+                </div>
+            </div>
+        </section>
+    </header>
 
 </body>
 
