--- a/index.html
+++ b/index.html
@@ -41,6 +41,180 @@
         </section>
     </header>
 
+    <main>
+        <!-- Popular product part start -->
+        <section class="blog-container">
+
+            <div class="populer-blogs">
+                <div class="blog  choice-action">
+
+                    <div class="choice-event">
+                        <button>Upcoming Match</button>
+                        <button>All Group</button>
+                        <button class="special-action">Blog</button>
+
+                    </div>
+
+
+                </div>
+                <div class="blog">
+                    <div class="blog-img">
+                        <img src="images/Blog Image.png" alt="">
+                    </div>
+                    <div class="blog-catagory">
+                        <h2 class="catagory-name">Transfer</h2>
+
+
+
+                    </div>
+                    <div class="blog-details">
+                        <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                    </div>
+                    <div class="blog-info">
+                        <div>
+                            <i class="fa-solid fa-clock"></i>
+                            <span>10 h</span>
+                            <i class="fa-solid fa-comment-dots"></i>
+                            <span>23</span>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="blog">
+                    <div class="blog-img">
+                        <img src="images/Blog Image.png" alt="">
+                    </div>
+                    <div class="blog-catagory">
+                        <h2 class="catagory-name">Transfer</h2>
+
+
+
+                    </div>
+                    <div class="blog-details">
+                        <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                    </div>
+                    <div class="blog-info">
+                        <div>
+                            <i class="fa-solid fa-clock"></i>
+                            <span>10 h</span>
+                            <i class="fa-solid fa-comment-dots"></i>
+                            <span>23</span>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="blog">
+                    <div class="blog-img">
+                        <img src="images/Blog Image.png" alt="">
+                    </div>
+                    <div class="blog-catagory">
+                        <h2 class="catagory-name">Transfer</h2>
+
+
+                    </div>
+                    <div class="blog-details">
+                        <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                    </div>
+                    <div class="blog-info">
+                        <div>
+                            <i class="fa-solid fa-clock"></i>
+                            <span>10 h</span>
+                            <i class="fa-solid fa-comment-dots"></i>
+                            <span>23</span>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+        <section class="more-blogs-section">
+            <div class="more-blogs">
+                <div class="blog">
+                    <div class="blog-img">
+                        <img src="images/Blog Image.png" alt="">
+                    </div>
+                    <div class="blog-catagory">
+                        <h2 class="catagory-name">Transfer</h2>
+
+
+                    </div>
+                    <div class="blog-details">
+                        <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                    </div>
+                    <div class="blog-info">
+                        <div>
+                            <i class="fa-solid fa-clock"></i>
+                            <span>10 h</span>
+                            <i class="fa-solid fa-comment-dots"></i>
+                            <span>23</span>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="blog">
+                    <div class="blog-img">
+                        <img src="images/Blog Image.png" alt="">
+                    </div>
+                    <div class="blog-catagory">
+                        <h2 class="catagory-name">Transfer</h2>
+
+
+                    </div>
+                    <div class="blog-details">
+                        <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                    </div>
+                    <div class="blog-info">
+                        <div>
+                            <i class="fa-solid fa-clock"></i>
+                            <span>10 h</span>
+                            <i class="fa-solid fa-comment-dots"></i>
+                            <span>23</span>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="blog">
+                    <div class="blog-img">
+                        <img src="images/Blog Image.png" alt="">
+                    </div>
+                    <div class="blog-catagory">
+                        <h2 class="catagory-name">Transfer</h2>
+
+
+                    </div>
+                    <div class="blog-details">
+                        <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                    </div>
+                    <div class="blog-info">
+                        <div>
+                            <i class="fa-solid fa-clock"></i>
+                            <span>10 h</span>
+                            <i class="fa-solid fa-comment-dots"></i>
+                            <span>23</span>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+    </main>
+    <!-- footer part start -->
+    <footer>
+        <div class="footer-info">
+            <h3>Influencer products</h3>
+            <p>Copyright © 2020 influencer products</p>
+            <p>All rights reserved</p>
+        </div>
+        <div class="footer-social-icon">
+            <i class="fab fa-instagram"></i>
+            <i class="fab fa-dribbble"></i>
+            <i class="fab fa-twitter"></i>
+            <i class="fab fa-youtube"></i>
+        </div>
+    </footer>
+    <!-- footer part end -->
+
+
 </body>
 
 </html>
