fotter part add

--- a/index.html
+++ b/index.html
@@ -201,9 +201,21 @@
     <!-- footer part start -->
     <footer>
         <div class="footer-info">
-            <h3>Influencer products</h3>
-            <p>Copyright © 2020 influencer products</p>
-            <p>All rights reserved</p>
+            <h1>The World Cup</h1>
+        </div>
+        <div class="fotter-menu">
+            <!-- <hr class="fotter-menu-hr"> -->
+            <nav class="fotter-container">
+                <ul class="navigation-bar">
+                    <li><a href="#">Contact Us </a></li>
+                    <li><a href="#">Terms of Service </a></li>
+                    <li><a href="#">Privacy Policy</a></li>
+                    <li><a href="#">Privacy Settings</a></li>
+                    <li><a href="#">Goal App</a></li>
+                    <li><a href="#">Goal App </a></li>
+
+                </ul>
+            </nav>
         </div>
         <div class="footer-social-icon">
             <i class="fab fa-instagram"></i>
