--- a/website.html
+++ b/website.html
@@ -8,7 +8,7 @@
     <!-- font Awesome Link -->
     <script src="https://kit.fontawesome.com/ddb9558c21.js" crossorigin="anonymous"></script>
     <!--css style link -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="website.css">
     <title>Influencer Shop | Best place to Buy your Dream Product</title>
 </head>
 
@@ -49,7 +49,7 @@
                 <div class="blog  choice-action">
 
                     <div class="choice-event">
-                        <button><a href="website.html" target="_blank">Upcoming Match</a></button>
+                        <button>Upcoming Match</button>
                         <button>All Group</button>
                         <button class="special-action">Blog</button>
 
