second website add

--- a/website.html
+++ b/website.html
@@ -49,9 +49,9 @@
                 <div class="blog  choice-action">
 
                     <div class="choice-event">
-                        <button>Upcoming Match</button>
+                        <button class="special-action">Upcoming Match</button>
                         <button>All Group</button>
-                        <button class="special-action">Blog</button>
+                        <button>Blog</button>
 
                     </div>
 
@@ -59,71 +59,39 @@
                 </div>
                 <div class="blog">
                     <div class="blog-img">
-                        <img src="images/Blog Image.png" alt="">
+                        <img src="images/germany Flag.png" alt="">
+                        <h1>VS</h1>
+                        <img src="images/Flag.png" alt="">
                     </div>
-                    <div class="blog-catagory">
-                        <h2 class="catagory-name">Transfer</h2>
 
-
-
-                    </div>
                     <div class="blog-details">
-                        <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                        <h2>Germany VS France</h2>
+                        <p>April 01, 2023, 1.00 AM</p>
                     </div>
-                    <div class="blog-info">
-                        <div>
-                            <i class="fa-solid fa-clock"></i>
-                            <span>10 h</span>
-                            <i class="fa-solid fa-comment-dots"></i>
-                            <span>23</span>
-                        </div>
-                    </div>
-
                 </div>
                 <div class="blog">
                     <div class="blog-img">
-                        <img src="images/Blog Image.png" alt="">
+                        <img src="images/germany Flag.png" alt="">
+                        <h1>VS</h1>
+                        <img src="images/Flag.png" alt="">
                     </div>
-                    <div class="blog-catagory">
-                        <h2 class="catagory-name">Transfer</h2>
 
-
-
-                    </div>
                     <div class="blog-details">
-                        <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                        <h2>Germany VS France</h2>
+                        <p>April 01, 2023, 1.00 AM</p>
                     </div>
-                    <div class="blog-info">
-                        <div>
-                            <i class="fa-solid fa-clock"></i>
-                            <span>10 h</span>
-                            <i class="fa-solid fa-comment-dots"></i>
-                            <span>23</span>
-                        </div>
-                    </div>
-
                 </div>
                 <div class="blog">
                     <div class="blog-img">
-                        <img src="images/Blog Image.png" alt="">
+                        <img src="images/germany Flag.png" alt="">
+                        <h1>VS</h1>
+                        <img src="images/Flag.png" alt="">
                     </div>
-                    <div class="blog-catagory">
-                        <h2 class="catagory-name">Transfer</h2>
 
-
-                    </div>
                     <div class="blog-details">
-                        <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                        <h2>Germany VS France</h2>
+                        <p>April 01, 2023, 1.00 AM</p>
                     </div>
-                    <div class="blog-info">
-                        <div>
-                            <i class="fa-solid fa-clock"></i>
-                            <span>10 h</span>
-                            <i class="fa-solid fa-comment-dots"></i>
-                            <span>23</span>
-                        </div>
-                    </div>
-
                 </div>
             </div>
         </section>
@@ -131,69 +99,39 @@
             <div class="more-blogs">
                 <div class="blog">
                     <div class="blog-img">
-                        <img src="images/Blog Image.png" alt="">
+                        <img src="images/germany Flag.png" alt="">
+                        <h1>VS</h1>
+                        <img src="images/Flag.png" alt="">
                     </div>
-                    <div class="blog-catagory">
-                        <h2 class="catagory-name">Transfer</h2>
 
-
-                    </div>
                     <div class="blog-details">
-                        <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                        <h2>Germany VS France</h2>
+                        <p>April 01, 2023, 1.00 AM</p>
                     </div>
-                    <div class="blog-info">
-                        <div>
-                            <i class="fa-solid fa-clock"></i>
-                            <span>10 h</span>
-                            <i class="fa-solid fa-comment-dots"></i>
-                            <span>23</span>
-                        </div>
-                    </div>
-
                 </div>
                 <div class="blog">
                     <div class="blog-img">
-                        <img src="images/Blog Image.png" alt="">
+                        <img src="images/germany Flag.png" alt="">
+                        <h1>VS</h1>
+                        <img src="images/Flag.png" alt="">
                     </div>
-                    <div class="blog-catagory">
-                        <h2 class="catagory-name">Transfer</h2>
 
-
-                    </div>
                     <div class="blog-details">
-                        <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                        <h2>Germany VS France</h2>
+                        <p>April 01, 2023, 1.00 AM</p>
                     </div>
-                    <div class="blog-info">
-                        <div>
-                            <i class="fa-solid fa-clock"></i>
-                            <span>10 h</span>
-                            <i class="fa-solid fa-comment-dots"></i>
-                            <span>23</span>
-                        </div>
-                    </div>
-
                 </div>
                 <div class="blog">
                     <div class="blog-img">
-                        <img src="images/Blog Image.png" alt="">
+                        <img src="images/germany Flag.png" alt="">
+                        <h1>VS</h1>
+                        <img src="images/Flag.png" alt="">
                     </div>
-                    <div class="blog-catagory">
-                        <h2 class="catagory-name">Transfer</h2>
 
-
-                    </div>
                     <div class="blog-details">
-                        <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                        <h2>Germany VS France</h2>
+                        <p>April 01, 2023, 1.00 AM</p>
                     </div>
-                    <div class="blog-info">
-                        <div>
-                            <i class="fa-solid fa-clock"></i>
-                            <span>10 h</span>
-                            <i class="fa-solid fa-comment-dots"></i>
-                            <span>23</span>
-                        </div>
-                    </div>
-
                 </div>
             </div>
         </section>
